fixes responsiveness on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,11 @@ body {
   font-size: 1.25em;
   font-family: 'Maven Pro', 'Open Sans', sans-serif;
   text-align: center;
-  /*background-image: url("images/waves-simonschmidt-unsplash.jpeg");*/
 }
 
-.navbar-fixed {
-  display: none;
-}
 
 .table-of-contents a {
-  color: white;
+  color: rgb(48, 51, 61);
 }
 
 .table-of-contents a:hover {
@@ -39,7 +35,7 @@ i {
   padding-top: 20px;
 }
 
-h1 {
+.headline {
   font-family: 'Rock Salt', 'Century Gothic', sans-serif;
 }
 
@@ -76,6 +72,13 @@ footer a {
   color: #d6d6d6;
 }
 
+.headshot {
+  position: relative;
+  top: 50px;
+  left: 0;
+  padding: 10px;
+}
+
 @media (max-width: 400px){
   .parallax-container {
     display: none;
@@ -83,5 +86,22 @@ footer a {
 
   .tab {
     font-size: 12px;
+  }
+
+  .headshot {
+    position: relative;
+    top: 5px;
+    left: 0;
+    padding: 10px;
+  }
+
+  .about {
+    background: #80cbc4;
+    padding: 10px;
+  }
+
+  .projects {
+    background: #4db6ac;
+    padding: 10px;
   }
 }
